--- a/projeto.css
+++ b/projeto.css
@@ -224,4 +224,26 @@ padding: 30px;
  transition: 10px;
 
 }
+.footer{
+
+    background-color: black; /*cor de fundo*/
+       padding: 50px; /*preenchimento interno*/
+       color: rgb(230, 230, 14);/*cor das letras*/
+       /* sempre alinhar os itens utilizando o display:flex e suas propriedades */
+       display: flex; /*utilizando para fazer alinhamento*/
+       align-items: center; /*alinhamento vertical*/
+       justify-content: center; /*alinhamento horizontal*/
+       text-align: center; /*alinhamento dos textos*/
+       font-size: 25px;/*aumentando o tamanho dos textos*/
+
+
+
+
+
+}
+footer i {
+    font-size: 40px;
+    color: white;
+}
+   
 
